demo01-setup/registry-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 1000m
  name: registry
spec:
  rules:
    - host: ::hostname::
      http:
        paths:
          - backend:
              serviceName: registry-docker-registry
              servicePort: 5000
            path: /
